FIX: visibility property name

--- a/src/hangman.scss
+++ b/src/hangman.scss
@@ -32,7 +32,7 @@ $primaryColor: #00A8FF;
 
     &.hang4 {
         .man {
-            vpxisibility: visible !important;
+            visibility: hidden !important;
         }
     }
 
